fixed rushour var and added tourist peak var

--- a/Code/5_Analysis_Preparation.Rmd
+++ b/Code/5_Analysis_Preparation.Rmd
@@ -256,7 +256,8 @@ weekday <- wday(mta_sub$arrival_time, label = T)
 month <- month(mta_sub$arrival_time)
 
 # Rush hour variable
-rushour <- ifelse((mta_sub$arrival_time > 7 &  mta_sub$arrival_time <= 9),"Morning Rush", ifelse((mta_sub$arrival_time > 4 & mta_sub$arrival_time <= 7),"Evening Rush","Nonrush"))
+rushour <- ifelse((hours > 7 & hours <= 9),"Morning Rush", ifelse((hours > 16 & hours <= 19),"Evening Rush","Nonrush"))
+tourist_peak <- ifelse((hours > 9 & hours < 16), "Tourist Peak","Non-tourist peak")
 ```
 
 
@@ -272,6 +273,7 @@ analysis_data$hour <- hours
 analysis_data$weekday <- weekday
 analysis_data$month <- month
 analysis_data$rushour <- rushour
+analysis_data$tourist_peak <- tourist_peak
 # remove extra columns
 analysis_data <- analysis_data[,c(3,7:15)]
 # save
