--- a/Highlights/Project_Highlights.Rmd
+++ b/Highlights/Project_Highlights.Rmd
@@ -28,9 +28,9 @@ Perhaps by accident, but mostly by design, the results for question 3 are intert
 
 # Q1: Wait Time Distributions
 
-Below are the wait time distributions for the three exit times. The distributions look quite similar. i used a two-sample Kolmogorov-Smirnov test to determine whether each distribution was different from the other two. After adjusting the p-values via Benjamini-Hochberg, I found all three distributions to be significantly different from one another. However, I am cautious to interpret the results of the KS test given that the independence assumption of my data is conditional on train spacing. A train arrival in January is independent from a train arrival in May, but any two consecutive trains are probably not independent.  
+Below are the wait time distributions for the three exit times. The distributions look quite similar. I used a two-sample Kolmogorov-Smirnov test to determine whether each distribution was different from the other two. After adjusting the p-values via Benjamini-Hochberg, I found all three distributions to be significantly different from one another. However, I am cautious to interpret the results of the KS test given that the independence assumption of my data is conditional on train spacing. A train arrival in January is independent from a train arrival in May, but any two consecutive trains are probably not independent.  
 
-```{r wait time distributions, fig.width = 6, fig.height = 4}
+```{r wait time distributions, echo=FALSE, fig.height=4, fig.width=6}
 plot(density(analysis_data$wait_times_1min), main = "Wait times with 1, 2, and 3 minutes exit time", col = 2)
 lines(density(analysis_data$wait_times_2min), col = 4)
 lines(density(analysis_data$wait_times_3min), col = 5)
@@ -51,7 +51,7 @@ The hours of the day were split into the following three categories based on the
 
 Across all three exit times, morning rush hour and evening rush hour look similar. Both appear to have a similar quantity of nightmare waits (30+ minutes). The noticeable difference is between the rush hour times and the non-rush hour time. The median wait time during non-rush hour is much higher, and the distribution has a greater variance. 
 
-```{r rush hour, fig.width = 6, fig.height = 4}
+```{r rush hour, echo=FALSE, fig.height=4, fig.width=6}
 plot(as.factor(analysis_data$rushour), analysis_data$wait_times_1min, main = "Wait times (1 min exit time)",xlab = "Rush hour vs Non-rush hour",ylab = "Wait time")
 plot(as.factor(analysis_data$rushour), analysis_data$wait_times_2min, main = "Wait times (2 min exit time)",xlab = "Rush hour vs Non-rush hour",ylab = "Wait time")
 plot(as.factor(analysis_data$rushour), analysis_data$wait_times_3min, main = "Wait times (3 min exit time)",xlab = "Rush hour vs Non-rush hourk",ylab = "Wait time")
@@ -61,7 +61,7 @@ plot(as.factor(analysis_data$rushour), analysis_data$wait_times_3min, main = "Wa
 
 The morning rush, evening rush, and non-rush hour comparison aggregated time blocks, but are there hour-by-hour differences in wait times? Based on the median plot below, wait time does appear to vary as a function of hour of the day. As soon as the morning rush hour is over, the median wait times jump from less than 10 minutes to 15 to 18 minutes. This jump is consistent for all three exit times. As the evening rush approaches, wait times decrease, but steadily climb throughout the midnight hours. 
 
-```{r hours}
+```{r hours, echo=FALSE}
 # medians
 medians_IQR <- analysis_data %>% 
   group_by(as.factor(hour)) %>% 
@@ -80,3 +80,26 @@ lines(x = as.numeric(medians_IQR$hour), y = medians_IQR$median_3min, lwd = 2, co
 legend("bottomright",legend = c("1 min","2 min","3 min"), lty = 1, lwd = 2, col = c(1,2,4))
 ```
 
+## Day of the week
+
+Given the differences across hours, I checked for differences across days of the week. There seems to be a strange pattern where Tuesday and Thursday have slightly higher medians than Monday, Wednesday, and Friday, which resemble each other. This could be an artifact of the data. The good news is that Monday doesn't have the highest median. 
+
+```{r day of the week, echo=FALSE}
+plot(analysis_data$weekday, analysis_data$wait_times_1min, main = "Wait times (1 min exit time)",xlab = "Day of the week",ylab = "Wait time")
+plot(analysis_data$weekday, analysis_data$wait_times_2min, main = "Wait times (2 min exit time)",xlab = "Day of the week",ylab = "Wait time")
+plot(analysis_data$weekday, analysis_data$wait_times_3min, main = "Wait times (3 min exit time)",xlab = "Day of the week",ylab = "Wait time")
+```
+
+## Month
+
+Finally, given that the data spans from January to August, I checked to see if  the distributions vary across the months. Based on the side-by-side boxplots, it's difficult to distinguish minute differences. However, May easily sticks out as the month with the highest median and the most variance. 
+
+```{r month, echo=FALSE}
+plot(as.factor(analysis_data$month), analysis_data$wait_times_1min, main = "Wait times (1 min exit time)",xlab = "Month",ylab = "Wait time")
+plot(as.factor(analysis_data$month), analysis_data$wait_times_2min, main = "Wait times (2 min exit time)",xlab = "Month",ylab = "Wait time")
+plot(as.factor(analysis_data$month), analysis_data$wait_times_3min, main = "Wait times (3 min exit time)",xlab = "Month",ylab = "Wait time")
+```
+
+# Q3: Differences by exit time?
+
+Based on the results above, it seems that the differences between the wait times are largely conditional on the time of day. During rush hour, it doesn't seem to make a difference if you can run or not, on average. 
