--- a/Code/6_Wait_Time_Analysis.Rmd
+++ b/Code/6_Wait_Time_Analysis.Rmd
@@ -130,3 +130,31 @@ paste("The 95% confidence interval for the difference in means between 1min vs 3
 paste("The 95% confidence interval for the difference in means between 2min vs 3min is (", round(t3$conf.int[1],3),",", round(t3$conf.int[2],3),")")
 ```
 
+# Probality of Wait Times
+
+Next I will calculate the probability of waiting 30+ minutes, of waiting 27-29 minutes (the myth), and of waiting less than 5 minutes for each of the distributions.
+
+## The 1 minute myth
+
+I'm allowing for a range of 1 to 3 minutes to qualify as the myth given that I'm looking at a range of exit times. First I'll calculate the marginal probabilities, and then move onto conditional probabilities. 
+
+```{r probs myth}
+# Between 27 and 29 minutes (the myth)
+paste("The probability of waiting between 27 and 29 minutes for the ferry is",round(sum(analysis_data$wait_times_1min >= 27 & analysis_data$wait_times_1min <= 29.9)/dim(analysis_data)[1],2))
+paste("The probability of waiting between 27 and 29 minutes for the ferry is",round(sum(analysis_data$wait_times_2min >= 27 & analysis_data$wait_times_2min <= 29.9)/dim(analysis_data)[1],2))
+paste("The probability of waiting between 27 and 29 minutes for the ferry is",round(sum(analysis_data$wait_times_3min >= 27 & analysis_data$wait_times_3min <= 29.9)/dim(analysis_data)[1],2))
+```
+
+Whether or not it's surprising, missing the ferry by a couple minutes has a small probability. Let's see if there are differences if we condition on hour of day.
+
+```{r probs myth rush}
+myth_hour <- analysis_data %>% 
+  group_by(as.factor(hour)) %>% 
+  summarise(prob_1min = sum(wait_times_1min >= 27 & wait_times_1min <=29.9)/n(),
+            prob_2min = sum(wait_times_2min >= 27 & wait_times_2min <=29.9)/n(),
+            prob_3min = sum(wait_times_3min >= 27 & wait_times_3min <=29.9)/n())
+colnames(myth_hour)[1] <- "Hour"
+print.data.frame(myth_hour)
+```
+
+Some interesting patterns emerge in the conditional probabilities. For the 1 minute and 2 minute exit times, you have a 33% and 32% chance, respectively, of just missing the ferry by minutes at 3 am. Yet if you take 3 minutes to exit the terminal, you have only a 4% chance of missing the ferry by minutes at 3 am. A similar pattern exists for 10 pm ferries. In contrast, the pattern is reversed at 1 am: with a 3 minute exit time, you have a 19% chance of just missing the ferry by minutes. But if you take 2 minutes or 1 minute to exit, you have only 1 % and 2% chance, respectively. 
