--- a/Code/6_Wait_Time_Analysis.Rmd
+++ b/Code/6_Wait_Time_Analysis.Rmd
@@ -159,6 +159,20 @@ print.data.frame(myth_hour)
 
 Some interesting patterns emerge in the conditional probabilities. For the 1 minute and 2 minute exit times, you have a 33% and 32% chance, respectively, of just missing the ferry by minutes at 3 am. Yet if you take 3 minutes to exit the terminal, you have only a 4% chance of missing the ferry by minutes at 3 am. A similar pattern exists for 10 pm ferries. In contrast, the pattern is reversed at 1 am: with a 3 minute exit time, you have a 19% chance of just missing the ferry by minutes. But if you take 2 minutes or 1 minute to exit, you have only 1 % and 2% chance, respectively. 
 
+Let's check the probabilities conditional on weekday. 
+
+```{r prob myth day}
+prob_weekday <- analysis_data %>% 
+  group_by(as.factor(weekday)) %>% 
+  summarise(prob_1min = sum(wait_times_1min >= 27 & wait_times_1min <=29.9)/n(),
+            prob_2min = sum(wait_times_2min >= 27 & wait_times_2min <=29.9)/n(),
+            prob_3min = sum(wait_times_3min >= 27 & wait_times_3min <=29.9)/n())
+colnames(prob_weekday)[1] <- "Weekday"
+print.data.frame(prob_weekday)
+```
+
+Once again, the probabilities are quite low, with a range from 0.03 to 0.09. Monday, Wednesday, and Friday do appear to be the better days. Tuesday holds the highest probability of just missing the ferry by minutes for 1 minute and 2 minute exit times, while Thursday holds the highest probability for 3 minute exit times. 
+
 Given the high May median from the by-month distribution, I'll check the probability of waiting 27-29 minutes (inclusive) by month.
 
 ```{r probs myth month}
@@ -173,19 +187,52 @@ print.data.frame(probs_month)
 
 Something definitely happened in May -- it is the only month where the probability exceeds 0.059 across all exit times. 
 
-Finally, let's check out the probability conditionl on weekday.
+## The nightmare commute: 30+ minute waits
 
-```{r prob myth day}
-prob_weekday <- analysis_data %>% 
+Although rare, 30+ minute waits do happen. I'll break it down marginally and conditionally to understand when such waits are more likely to happen. 
+
+```{r nightmare marginal}
+paste("The probability of waiting 30+ minutes for the ferry is",round(sum(analysis_data$wait_times_1min >= 30)/dim(analysis_data)[1],2))
+paste("The probability of waiting 30+ minutes for the ferry is",round(sum(analysis_data$wait_times_2min >= 30)/dim(analysis_data)[1],2))
+paste("The probability of waiting 30+ minutes for the ferry is",round(sum(analysis_data$wait_times_3min >= 30)/dim(analysis_data)[1],2))
+```
+
+The probabilities are quite similar to those from the myth. So the area under the curve between 30 minutes and 59.9 minutes is roughly the same as the area under the curve between 27 and 29 minutes. 
+
+I'll break it down by hour, weekday, and month now.
+
+```{r}
+nightmare_hour <- analysis_data %>% 
+  group_by(as.factor(hour)) %>% 
+  summarise(prob_1min = sum(wait_times_1min >= 30)/n(),
+            prob_2min = sum(wait_times_2min >= 30)/n(),
+            prob_3min = sum(wait_times_3min >= 30)/n())
+colnames(nightmare_hour)[1] <- "Hour"
+print.data.frame(nightmare_hour)
+```
+Something strange happens around 23:00! The probability of waiting 30+ minutes is roughly 30%.
+
+```{r nightmare weekday}
+nightmare_weekday <- analysis_data %>% 
   group_by(as.factor(weekday)) %>% 
   summarise(prob_1min = sum(wait_times_1min >= 27 & wait_times_1min <=29.9)/n(),
             prob_2min = sum(wait_times_2min >= 27 & wait_times_2min <=29.9)/n(),
             prob_3min = sum(wait_times_3min >= 27 & wait_times_3min <=29.9)/n())
-colnames(prob_weekday)[1] <- "Weekday"
-print.data.frame(prob_weekday)
+colnames(nightmare_weekday)[1] <- "Weekday"
+print.data.frame(nightmare_weekday)
 ```
-Once again, the probabilities are quite low, with a range from 0.03 to 0.09. Monday, Wednesday, and Friday do appear to be the better days. Tuesday holds the highest probability of just missing the ferry by minutes for 1 minute and 2 minute exit times, while Thursday holds the highest probability for 3 minute exit times. 
+No single day is routinely bad, but once again Thursday has the highest probabilty for 3 minute exit time, while Tuesday has the highest probability of 1 and 2 minute exit times. 
 
-## The nightmare commute: 30+ minute waits
+Last step is to check probabilities conditionl on month.
 
-Although rare, 30+ minute waits do happen. I'll break it down marginally and conditionally to understand when such waits are more likely to happen. 
+```{r nightmare month}
+nightmare_month <- analysis_data %>% 
+  group_by(as.factor(month)) %>% 
+  summarise(prob_1min = sum(wait_times_1min >= 30)/n(),
+            prob_2min = sum(wait_times_2min >= 30)/n(),
+            prob_3min = sum(wait_times_3min >= 30)/n())
+colnames(nightmare_month)[1] <- "Month"
+print.data.frame(nightmare_month)
+```
+
+The month of May isn't as bad here except for 2 minute exit time -- roughly 10% chance of having a nightmare wait. 
