--- a/Code/5_Analysis_Preparation.Rmd
+++ b/Code/5_Analysis_Preparation.Rmd
@@ -280,6 +280,8 @@ analysis_data$rushour <- rushour
 analysis_data$tourist_peak <- tourist_peak
 # remove extra columns
 analysis_data <- analysis_data[,c(3,7:15)]
+# remove any duplicate rows
+analysis_data <- unique.data.frame(analysis_data)
 # save
 save(analysis_data, file = "../Data/Clean/analysis_data.RData")
 ```
