updated exit time comment

--- a/Highlights/Project_Highlights.Rmd
+++ b/Highlights/Project_Highlights.Rmd
@@ -102,7 +102,7 @@ plot(as.factor(analysis_data$month), analysis_data$wait_times_3min, main = "Wait
 
 # Q3: Differences by exit time?
 
-Based on the results above, it seems that the differences between the wait times are largely conditional on the time of day. During rush hour, it doesn't seem to make a difference if you can run or not, on average. 
+Based on the results above, it seems that the differences between the wait times are largely conditional on the time of day. During rush hour, it doesn't seem to make a difference if you can run or not, on average. However, between 3 and 4 am, you may want to run to reduce the probability that you'll just miss the ferry.
 
 # Is the myth just a myth?
 
